--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -6,7 +6,7 @@
     </style>
     <property name="halign">start</property>
     <property name="valign">end</property>
-    <property name="width-request">320</property>
+    <property name="width-request">350</property>
     <child>
       <object class="GtkBox" id="box">
         <property name="orientation">vertical</property>
@@ -14,10 +14,10 @@
           <object class="GtkBox">
             <property name="orientation">horizontal</property>
             <property name="spacing">6</property>
-            <property name="margin-top">12</property>
-            <property name="margin-bottom">12</property>
-            <property name="margin-start">12</property>
-            <property name="margin-end">12</property>
+            <property name="margin-top">9</property>
+            <property name="margin-bottom">9</property>
+            <property name="margin-start">24</property>
+            <property name="margin-end">24</property>
             <child>
               <object class="GtkSearchEntry" id="search_entry">
                 <property name="hexpand">True</property>
@@ -45,16 +45,19 @@
             <property name="hhomogeneous">false</property>
             <child>
               <object class="GtkFrame" id="empty">
-                <property name="margin-top">12</property>
-                <property name="margin-bottom">12</property>
-                <property name="margin-start">12</property>
-                <property name="margin-end">12</property>
+                <property name="margin-top">24</property>
+                <property name="margin-bottom">24</property>
+                <property name="margin-start">24</property>
+                <property name="margin-end">24</property>
+                <style>
+                  <class name="card"/>
+                </style>
                 <child>
                   <object class="GtkLabel">
                     <property name="label" translatable="yes">No Recent Documents</property>
                     <property name="margin-start">6</property>
-                    <property name="margin-top">42</property>
-                    <property name="margin-bottom">42</property>
+                    <property name="margin-top">12</property>
+                    <property name="margin-bottom">12</property>
                     <property name="margin-end">6</property>
                   </object>
                 </child>
@@ -73,10 +76,13 @@
                   <object class="GtkViewport">
                     <child>
                       <object class="GtkFrame">
-                        <property name="margin-top">12</property>
-                        <property name="margin-bottom">12</property>
-                        <property name="margin-start">12</property>
-                        <property name="margin-end">12</property>
+                        <property name="margin-top">24</property>
+                        <property name="margin-bottom">24</property>
+                        <property name="margin-start">24</property>
+                        <property name="margin-end">24</property>
+                        <style>
+                          <class name="card"/>
+                        </style>
                         <child>
                           <object class="GtkListBox" id="list_box">
                             <signal name="row-activated" handler="on_list_box_row_activated_cb" swapped="true" object="EditorOpenPopover"/>
