preferences: switch to preferences window
This moves us back to a AdwPreferencesWindow but using a new design. It
does need some more work still, but this is far enough to be generally
useful while we figure out the rest of the tweaks.

It still needs:

 * Preview the custom font (by setting up CSS for the sourceview)
 * Show the proper scheme after light/dark has changed
 * Various other tweaks

But either way good enough to get some feedback.

Related #183

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -4,6 +4,12 @@
 }
 
 
+/* EditorPreferencesDialog */
+.org-gnome-TextEditor.preferences textview.preview {
+  line-height: 1.5;
+}
+
+
 /* EditorThemeSelector */
 .org-gnome-TextEditor themeselector {
   margin: 9px;
