--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -31,12 +31,14 @@
         <child>
           <object class="GtkScrolledWindow">
             <property name="vexpand">true</property>
+            <property name="max-content-height">400</property>
+            <property name="propagate-natural-height">true</property>
             <property name="hscrollbar-policy">never</property>
             <child>
               <object class="AdwClamp">
                 <property name="margin-start">42</property>
                 <property name="margin-end">42</property>
-                <property name="margin-top">12</property>
+                <property name="margin-top">42</property>
                 <property name="margin-bottom">42</property>
                 <property name="child">
                   <object class="GtkListBox" id="list_box">
