--- a/src/editor-language-row.ui
+++ b/src/editor-language-row.ui
@@ -1,29 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="4.0"/>
-  <template class="EditorLanguageRow" parent="GtkListBoxRow">
-    <property name="selectable">false</property>
+  <requires lib="libadwaita" version="1.0"/>
+  <template class="EditorLanguageRow" parent="AdwActionRow">
     <child>
-      <object class="GtkBox">
-        <property name="orientation">horizontal</property>
-        <property name="margin-top">6</property>
-        <property name="margin-bottom">6</property>
-        <property name="margin-start">12</property>
-        <property name="margin-end">12</property>
-        <property name="spacing">12</property>
-        <child>
-          <object class="GtkLabel" id="title">
-            <property name="halign">start</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkImage" id="image">
-            <property name="halign">start</property>
-            <property name="hexpand">true</property>
-            <property name="icon-name">object-select-symbolic</property>
-            <property name="visible">false</property>
-          </object>
-        </child>
+      <object class="GtkImage" id="image">
+        <property name="halign">start</property>
+        <property name="hexpand">false</property>
+        <property name="icon-name">object-select-symbolic</property>
+        <property name="visible">false</property>
       </object>
     </child>
   </template>
