--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -53,22 +53,20 @@
           <object class="AdwPreferencesGroup">
             <child>
               <object class="AdwExpanderRow">
+                <property name="title" translatable="yes">Custom Font</property>
+                <property name="expanded" bind-source="use_custom_font" bind-property="active" bind-flags="sync-create|bidirectional"/>
                 <child type="action">
-                  <object class="GtkSwitch" id="use_system_font">
+                  <object class="GtkSwitch" id="use_custom_font">
                     <property name="halign">end</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
                 <child>
                   <object class="EditorPreferencesFont" id="custom_font">
-                    <!-- translators: the surrounding span region is used to prevent word wrapping in display -->
-                    <property name="title" translatable="yes">&lt;span allow_breaks='false'&gt;Custom Font&lt;/span&gt;</property>
                     <property name="schema-key">custom-font</property>
-                    <property name="sensitive" bind-source="use_system_font" bind-property="active" bind-flags="sync-create|invert-boolean"/>
+                    <property name="sensitive" bind-source="use_custom_font" bind-property="active" bind-flags="sync-create"/>
                   </object>
                 </child>
-                <property name="title" translatable="yes">System Font</property>
-                <property name="expanded" bind-source="use_system_font" bind-property="active" bind-flags="sync-create|bidirectional|invert-boolean"/>
               </object>
             </child>
           </object>
