preferences: disable search
We only have one page, it's not really useful here.

Related #183

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -8,6 +8,7 @@
       <class name="org-gnome-TextEditor"/>
       <class name="preferences"/>
     </style>
+    <property name="search-enabled">false</property>
     <child>
       <object class="AdwPreferencesPage">
         <child>
