--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -42,6 +42,18 @@
                 <property name="margin-bottom">42</property>
                 <property name="child">
                   <object class="GtkListBox" id="list_box">
+                    <child type="placeholder">
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">No Matches</property>
+                        <property name="margin-top">18</property>
+                        <property name="margin-bottom">18</property>
+                        <property name="margin-end">18</property>
+                        <property name="margin-start">18</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
                     <style>
                       <class name="content"/>
                     </style>
