preferences: be more honest about settings discovery
Using "Automatic Right Margin" is incredibly dubious as it really indicates
if we will be automatically discovering settings across a number of
features including:

 * Right Margin Position
 * Auto-indentation
 * Indentation width
 * Tab width
 * Tabs v. Spaces
 * Text wrapping

Related #183

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -115,6 +115,13 @@
                 <property name="schema-key">restore-session</property>
               </object>
             </child>
+            <child>
+              <object class="EditorPreferencesSwitch" id="discover">
+                <property name="title" translatable="yes">Discover Document Settings</property>
+                <property name="subtitle" translatable="yes">Apply settings discovered using modelines, editorconfig, or sensible defaults</property>
+                <property name="schema-key">discover-settings</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
