--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -14,10 +14,10 @@
           <object class="GtkBox">
             <property name="orientation">horizontal</property>
             <property name="spacing">6</property>
-            <property name="margin-top">9</property>
-            <property name="margin-bottom">9</property>
-            <property name="margin-start">24</property>
-            <property name="margin-end">24</property>
+            <property name="margin-top">6</property>
+            <property name="margin-bottom">6</property>
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>
             <child>
               <object class="GtkSearchEntry" id="search_entry">
                 <property name="hexpand">True</property>
@@ -44,23 +44,12 @@
             <property name="vhomogeneous">false</property>
             <property name="hhomogeneous">false</property>
             <child>
-              <object class="GtkFrame" id="empty">
-                <property name="margin-top">24</property>
-                <property name="margin-bottom">24</property>
-                <property name="margin-start">24</property>
-                <property name="margin-end">24</property>
-                <style>
-                  <class name="card"/>
-                </style>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">No Recent Documents</property>
-                    <property name="margin-start">6</property>
-                    <property name="margin-top">12</property>
-                    <property name="margin-bottom">12</property>
-                    <property name="margin-end">6</property>
-                  </object>
-                </child>
+              <object class="GtkLabel" id="empty">
+                <property name="label" translatable="yes">No Recent Documents</property>
+                <property name="margin-start">6</property>
+                <property name="margin-top">18</property>
+                <property name="margin-bottom">18</property>
+                <property name="margin-end">6</property>
               </object>
             </child>
             <child>
@@ -75,31 +64,20 @@
                 <child>
                   <object class="GtkViewport">
                     <child>
-                      <object class="GtkFrame">
-                        <property name="margin-top">24</property>
-                        <property name="margin-bottom">24</property>
-                        <property name="margin-start">24</property>
-                        <property name="margin-end">24</property>
-                        <style>
-                          <class name="card"/>
-                        </style>
-                        <child>
-                          <object class="GtkListBox" id="list_box">
-                            <signal name="row-activated" handler="on_list_box_row_activated_cb" swapped="true" object="EditorOpenPopover"/>
-                            <property name="activate-on-single-click">True</property>
-                            <property name="selection-mode">none</property>
-                            <child type="placeholder">
-                              <object class="GtkLabel">
-                                <property name="label" translatable="yes">No Results Found</property>
-                                <property name="margin-start">6</property>
-                                <property name="margin-top">42</property>
-                                <property name="margin-bottom">42</property>
-                                <property name="margin-end">6</property>
-                                <style>
-                                  <class name="dim-label"/>
-                                </style>
-                              </object>
-                            </child>
+                      <object class="GtkListBox" id="list_box">
+                        <signal name="row-activated" handler="on_list_box_row_activated_cb" swapped="true" object="EditorOpenPopover"/>
+                        <property name="activate-on-single-click">True</property>
+                        <property name="selection-mode">none</property>
+                        <child type="placeholder">
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">No Results Found</property>
+                            <property name="margin-start">6</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-end">6</property>
+                            <style>
+                              <class name="dim-label"/>
+                            </style>
                           </object>
                         </child>
                       </object>
