--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -25,6 +25,7 @@
                     <property name="bottom-margin">8</property>
                     <property name="left-margin">12</property>
                     <property name="right-margin">12</property>
+                    <property name="right-margin-position">30</property>
                     <property name="monospace">true</property>
                     <property name="show-line-numbers">true</property>
                     <property name="buffer">
