preferences: simplify verbage for document settings
Related #183

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -119,7 +119,7 @@
             <child>
               <object class="EditorPreferencesSwitch" id="discover">
                 <property name="title" translatable="yes">Discover Document Settings</property>
-                <property name="subtitle" translatable="yes">Apply settings discovered using modelines, editorconfig, or sensible defaults</property>
+                <property name="subtitle" translatable="yes">Apply settings using modelines, editorconfig, or sensible defaults</property>
                 <property name="schema-key">discover-settings</property>
               </object>
             </child>
