statusbar: move statusbar to window level widget
We don't need this to be within the page. Instead make it window level and
try to clean it up a bit.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -162,6 +162,11 @@ Or, press Ctrl+W to close the window.</property>
             </child>
           </object>
         </child>
+        <child>
+          <object class="EditorStatusbar" id="statusbar">
+            <property name="visible">false</property>
+          </object>
+        </child>
       </object>
     </child>
   </template>
