--- a/src/editor-statusbar.ui
+++ b/src/editor-statusbar.ui
@@ -14,6 +14,7 @@
         <child>
           <object class="GtkBox">
             <property name="orientation">horizontal</property>
+            <property name="spacing">6</property>
             <property name="margin-top">3</property>
             <property name="margin-bottom">3</property>
             <property name="margin-start">12</property>
