themeselector: remove .dark from window
We don't need it there, it can be more localized.

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -34,7 +34,7 @@
   background: linear-gradient(to bottom right, #fff 50%, #2e3436 50%);
   border-color: #2e3436;
 }
-.org-gnome-TextEditor.dark themeselector checkbutton.follow {
+.org-gnome-TextEditor themeselector.dark checkbutton.follow {
   border-color: #dcdddd;
 }
 .org-gnome-TextEditor themeselector checkbutton.light {
