--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -43,12 +43,13 @@
                 <property name="child">
                   <object class="GtkListBox" id="list_box">
                     <child type="placeholder">
-                      <object class="GtkLabel">
+                      <object class="GtkLabel" id="placeholder">
                         <property name="label" translatable="yes">No Matches</property>
                         <property name="margin-top">18</property>
                         <property name="margin-bottom">18</property>
                         <property name="margin-end">18</property>
                         <property name="margin-start">18</property>
+                        <property name="visible">false</property>
                         <style>
                           <class name="dim-label"/>
                         </style>
