openpopover: improve transition to no-matches

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -70,6 +70,9 @@ window.org-gnome-TextEditor .open-popover contents {
 window.org-gnome-TextEditor .open-popover list {
   margin-bottom: 3px;
 }
+window.org-gnome-TextEditor .open-popover list label.placeholder {
+  min-height: 57px;
+}
 window.org-gnome-TextEditor .open-popover list row {
   border-radius: 9px;
   margin: 3px 6px;
