--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -71,11 +71,8 @@
                         <child type="placeholder">
                           <object class="GtkLabel">
                             <property name="label" translatable="yes">No Results Found</property>
-                            <property name="margin-start">6</property>
-                            <property name="margin-top">18</property>
-                            <property name="margin-bottom">18</property>
-                            <property name="margin-end">6</property>
                             <style>
+                              <class name="placeholder"/>
                               <class name="dim-label"/>
                             </style>
                           </object>
