--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -16,6 +16,7 @@ window.org-gnome-TextEditor themeselector {
 }
 window.org-gnome-TextEditor themeselector checkbutton {
   margin: 1px;
+  padding: 0;
   min-height: 42px;
   min-width: 42px;
   border-width: 1px;
