--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -100,14 +100,15 @@ window.org-gnome-TextEditor page .searchbar {
   color: @popover_fg_color;
   padding: 6px;
   border-style: solid;
-  border-color: @borders;
+  border-color: alpha(black, .14);
   border-left-width: 1px;
   border-right-width: 1px;
   border-bottom-width: 1px;
   border-bottom-left-radius: 9px;
   border-bottom-right-radius: 9px;
-  box-shadow: 0 0 5px 1px rgba(0,0,0,0.09);
   margin: 0 10px 20px 10px;
+  box-shadow: 0 1px 5px 1px alpha(black, .09),
+              0 2px 14px 3px alpha(black, .05);
 }
 window.org-gnome-TextEditor page .searchbar:backdrop {
   box-shadow: none;
