--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -45,6 +45,12 @@
                 <property name="title" translatable="yes" context="shortcut window">Reorder before previous tab</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">&lt;ctrl&gt;&lt;shift&gt;t</property>
+                <property name="title" translatable="yes" context="shortcut window">Restore previously closed tab</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
