css: tweak flowboxchild selection radaii
Fixes #271

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -8,6 +8,9 @@ window.org-gnome-TextEditor positionlabel label {
 window.org-gnome-TextEditor.preferences textview.preview {
   line-height: 1.2;
 }
+window.org-gnome-TextEditor.preferences preferencesgroup flowboxchild {
+  border-radius: 11px;
+}
 
 
 /* EditorThemeSelector */
