css: improve focus ring for previews
Related #271

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -9,7 +9,9 @@ window.org-gnome-TextEditor.preferences textview.preview {
   line-height: 1.2;
 }
 window.org-gnome-TextEditor.preferences preferencesgroup flowboxchild {
-  border-radius: 11px;
+  outline-offset: -3px;
+  border-radius: 14px;
+  outline-width: 2px;
 }
 
 
