--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -41,6 +41,7 @@
             </child>
             <child>
               <object class="GtkFlowBox" id="scheme_group">
+                <signal name="child-activated" handler="style_scheme_activated_cb" swapped="true"/>
                 <property name="hexpand">true</property>
                 <property name="column-spacing">0</property>
                 <property name="row-spacing">0</property>
