--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -222,7 +222,7 @@ Or, press Ctrl+W to close the window.</property>
     </section>
     <section>
       <item>
-        <attribute name="label" translatable="yes">_Preferences</attribute>
+        <attribute name="label" translatable="yes">P_references</attribute>
         <attribute name="action">win.show-preferences</attribute>
         <attribute name="accel">&lt;control&gt;comma</attribute>
       </item>
@@ -231,11 +231,11 @@ Or, press Ctrl+W to close the window.</property>
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">Help</attribute>
+        <attribute name="label" translatable="yes">_Help</attribute>
         <attribute name="action">app.help</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_About Text Editor</attribute>
+        <attribute name="label" translatable="yes">A_bout Text Editor</attribute>
         <attribute name="action">app.about</attribute>
       </item>
     </section>
