--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="4.0"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorLanguageDialog" parent="GtkWindow">
     <property name="title" translatable="yes">Document Type</property>
     <style>
