propertiesdialog: make sizing more strict
We don't need it to resize and risk the chance libadwaita requests more
size than we need. 360 is chosen from 720p/2.

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -3,6 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <template class="EditorPropertiesDialog" parent="GtkWindow">
     <property name="title" translatable="yes">Properties</property>
+    <property name="resizable">false</property>
+    <property name="default-width">360</property>
     <style>
       <class name="org-gnome-TextEditor"/>
       <class name="properties-dialog"/>
