--- a/src/editor-position-label.ui
+++ b/src/editor-position-label.ui
@@ -2,6 +2,9 @@
 <interface>
   <requires lib="gtk+" version="4.0"/>
   <template class="EditorPositionLabel" parent="GtkWidget">
+    <style>
+      <class name="numeric"/>
+    </style>
     <child>
       <object class="GtkBox" id="box">
         <property name="orientation">horizontal</property>
