--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -14,36 +14,27 @@ window.org-gnome-TextEditor themeselector {
   margin: 9px;
 }
 window.org-gnome-TextEditor themeselector checkbutton {
-  margin: 1px;
   padding: 0;
-  min-height: 42px;
-  min-width: 42px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: transparent;
+  min-height: 44px;
+  min-width: 44px;
+  padding: 1px;
+  background-clip: content-box;
   border-radius: 9999px;
+  box-shadow: inset 0 0 0 1px @borders;
 }
 window.org-gnome-TextEditor themeselector checkbutton.follow:checked,
 window.org-gnome-TextEditor themeselector checkbutton.light:checked,
 window.org-gnome-TextEditor themeselector checkbutton.dark:checked {
-  border-color: @theme_selected_bg_color;
-  border-width: 2px;
-  margin: 0;
+  box-shadow: inset 0 0 0 2px @theme_selected_bg_color;
 }
 window.org-gnome-TextEditor themeselector checkbutton.follow {
-  background: linear-gradient(to bottom right, #fff 49.99%, #2e3436 50.01%);
-  border-color: #2e3436;
-}
-window.org-gnome-TextEditor themeselector.dark checkbutton.follow {
-  border-color: #dcdddd;
+  background-image: linear-gradient(to bottom right, #fff 49.99%, #202020 50.01%);
 }
 window.org-gnome-TextEditor themeselector checkbutton.light {
   background-color: #fff;
-  border-color: #dcdddd;
 }
 window.org-gnome-TextEditor themeselector checkbutton.dark {
-  background-color: #2e3436;
-  border-color: #000;
+  background-color: #202020;
 }
 window.org-gnome-TextEditor themeselector checkbutton radio {
   -gtk-icon-source: none;
@@ -52,7 +43,7 @@ window.org-gnome-TextEditor themeselector checkbutton radio {
   box-shadow: none;
   min-width: 12px;
   min-height: 12px;
-  margin: 24px -4px -4px 24px;
+  transform: translate(27px, 14px);
   padding: 2px;
 }
 window.org-gnome-TextEditor checkbutton.theme-selector radio:checked {
