--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -60,12 +60,14 @@ window.org-gnome-TextEditor .open-popover contents {
 }
 window.org-gnome-TextEditor .open-popover list {
   margin-bottom: 3px;
+  background: none;
+  color: inherit;
 }
 window.org-gnome-TextEditor .open-popover list label.placeholder {
   min-height: 57px;
 }
 window.org-gnome-TextEditor .open-popover list row {
-  border-radius: 9px;
+  border-radius: 6px;
   margin: 3px 6px;
 }
 window.org-gnome-TextEditor .open-popover list row:first-child {
@@ -76,10 +78,6 @@ window.org-gnome-TextEditor .open-popover list row button {
   margin: 0;
   min-height: 24px;
   min-width: 24px;
-}
-window.org-gnome-TextEditor .open-popover list row:hover,
-window.org-gnome-TextEditor .open-popover list row:focus {
-  background: alpha(currentColor, .07);
 }
 
 
