propertiesdialog: rescan when the document is saved
Instead of showing an "Update" button, we can just update the document
when the file is saved to storage (or the drafts directory).

Fixes #282

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -10,16 +10,7 @@
       <class name="properties-dialog"/>
     </style>
     <child type="titlebar">
-      <object class="GtkHeaderBar">
-        <child type="start">
-          <object class="GtkButton" id="rescan">
-            <property name="label" translatable="yes">_Update</property>
-            <property name="use-underline">true</property>
-            <property name="visible">false</property>
-            <property name="action-name">win.rescan</property>
-          </object>
-        </child>
-      </object>
+      <object class="GtkHeaderBar"/>
     </child>
     <child>
       <object class="GtkBox">
