--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -42,12 +42,28 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="subtitle">
-                    <property name="ellipsize">middle</property>
-                    <attributes>
-                      <attribute name="scale" value="0.8222"/>
-                      <attribute name="foreground-alpha" value="32767"/>
-                    </attributes>
+                  <object class="GtkCenterBox">
+                    <child type="start">
+                      <object class="GtkImage" id="indicator">
+                        <property name="hexpand">true</property>
+                        <property name="halign">end</property>
+                        <property name="visible">false</property>
+                        <property name="margin-end">6</property>
+                        <property name="pixel-size">12</property>
+                        <style>
+                          <class name="dim-label"/>
+                        </style>
+                      </object>
+                    </child>
+                    <child type="center">
+                      <object class="GtkLabel" id="subtitle">
+                        <property name="ellipsize">middle</property>
+                        <attributes>
+                          <attribute name="scale" value="0.8222"/>
+                          <attribute name="foreground-alpha" value="32767"/>
+                        </attributes>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
