--- a/src/editor-info-bar.ui
+++ b/src/editor-info-bar.ui
@@ -2,40 +2,45 @@
 <interface>
   <template class="EditorInfoBar" parent="GtkWidget">
     <child>
-      <object class="GtkInfoBar" id="infobar">
-        <property name="message-type">warning</property>
-        <property name="show-close-button">True</property>
-        <property name="revealed">False</property>
+      <object class="GtkBox" id="box">
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkBox">
-            <property name="orientation">vertical</property>
+          <object class="GtkInfoBar" id="infobar">
+            <property name="message-type">warning</property>
+            <property name="show-close-button">True</property>
+            <property name="revealed">False</property>
             <child>
-              <object class="GtkLabel" id="title">
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Document Restored</property>
-                <attributes>
-                  <attribute name="weight" value="bold"/>
-                </attributes>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkLabel" id="title">
+                    <property name="halign">start</property>
+                    <property name="label" translatable="yes">Document Restored</property>
+                    <attributes>
+                      <attribute name="weight" value="bold"/>
+                    </attributes>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="subtitle">
+                    <property name="halign">start</property>
+                    <property name="label" translatable="yes">Unsaved document has been restored.</property>
+                  </object>
+                </child>
               </object>
             </child>
-            <child>
-              <object class="GtkLabel" id="subtitle">
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Unsaved document has been restored.</property>
+            <child type="action">
+              <object class="GtkButton" id="discard">
+                <property name="label" translatable="yes">_Discard…</property>
+                <property name="use-underline">True</property>
               </object>
             </child>
-          </object>
-        </child>
-        <child type="action">
-          <object class="GtkButton" id="discard">
-            <property name="label" translatable="yes">_Discard…</property>
-            <property name="use-underline">True</property>
-          </object>
-        </child>
-        <child type="action">
-          <object class="GtkButton" id="save">
-            <property name="margin-start">6</property>
-            <property name="use-underline">True</property>
+            <child type="action">
+              <object class="GtkButton" id="save">
+                <property name="margin-start">6</property>
+                <property name="use-underline">True</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
