infobar: namespace discard widgetry

--- a/src/editor-info-bar.ui
+++ b/src/editor-info-bar.ui
@@ -5,7 +5,7 @@
       <object class="GtkBox" id="box">
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkInfoBar" id="infobar">
+          <object class="GtkInfoBar" id="discard_infobar">
             <property name="message-type">warning</property>
             <property name="show-close-button">True</property>
             <property name="revealed">False</property>
