--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="3.98"/>
+  <requires lib="gtk" version="4.0"/>
+  <requires lib="Adw" version="1.0"/>
   <template class="EditorWindow" parent="AdwApplicationWindow">
     <style>
       <class name="org-gnome-TextEditor"/>
