ui: fix requires elements based on usage

--- a/src/editor-search-entry.ui
+++ b/src/editor-search-entry.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorSearchEntry" parent="GtkWidget">
     <property name="width-request">225</property>
     <child>
