--- a/src/editor-info-bar.ui
+++ b/src/editor-info-bar.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorInfoBar" parent="GtkWidget">
     <child>
       <object class="GtkBox" id="box">
