--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="4.0"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorPage" parent="GtkWidget">
     <child>
       <object class="GtkBox" id="box">
