--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <requires lib="libadwaita" version="1.0"/>
+  <requires lib="Adw" version="1.0"/>
   <template class="EditorPreferencesDialog" parent="AdwPreferencesWindow">
     <property name="default-height">700</property>
     <style>
