--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
+  <requires lib="Adw" version="1.0"/>
   <template class="EditorPropertiesDialog" parent="GtkWindow">
     <property name="title" translatable="yes">Properties</property>
     <property name="resizable">false</property>
