--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="4.0"/>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorSearchBar" parent="GtkWidget">
     <style>
       <class name="searchbar"/>
