--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
+  <requires lib="gtk" version="4.0"/>
   <template class="EditorThemeSelector" parent="GtkWidget">
     <property name="hexpand">true</property>
     <child>
