prefs: add GtkSource dependency to <requires/>

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -2,6 +2,7 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
+  <requires lib="GtkSource" version="5.0"/>
   <template class="EditorPreferencesDialog" parent="AdwPreferencesWindow">
     <property name="default-height">700</property>
     <style>
