shortcuts: fix annoying GTK warning
Since we're taking over a previous action this gets a bit annoying as it
warns on us. We can just use a different name instead and get the same
result.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -249,7 +249,7 @@ Or, press Ctrl+W to close the window.</property>
       </item>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
-        <attribute name="action">win.show-help-overlay</attribute>
+        <attribute name="action">win.alternate-help-overlay</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">_Help</attribute>
