--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -33,6 +33,7 @@
                         <property name="right-margin">12</property>
                         <property name="monospace">true</property>
                         <property name="smart-backspace">true</property>
+                        <property name="smart-home-end">before</property>
                       </object>
                     </child>
                   </object>
