style: remove what doesn't work on Linux
This seems to be a rendering oddity between macOS with CoreText and Linux
with FreeType.

--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,11 @@ textview.GtkSourceMap {
   font-size: 1.75pt;
   line-height: 5px;
   opacity: 0.75;
-  margin: 1px 0 2px 0;
+  /* on macOS this would need to be 1 0 2 0 likely due to how
+   * CoreText is being used. It just looks off. Anyway, maybe
+   * someday when we have media-query we can fix that.
+   */
+  margin: 0;
 }
 textview.GtkSourceMap:dir(ltr) {
   border-left: 1px solid @borders;
