--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -16,36 +16,33 @@
           <object class="AdwPreferencesGroup">
             <property name="title" translatable="yes">Appearance</property>
             <child>
-              <object class="GtkFrame">
+              <object class="GtkSourceView" id="source_view">
+                <property name="editable">false</property>
+                <property name="cursor-visible">false</property>
+                <property name="top-margin">8</property>
+                <property name="bottom-margin">8</property>
+                <property name="left-margin">12</property>
+                <property name="right-margin">12</property>
+                <property name="right-margin-position">30</property>
+                <property name="monospace">true</property>
+                <property name="show-line-numbers">true</property>
                 <property name="margin-bottom">24</property>
-                <child>
-                  <object class="GtkSourceView" id="source_view">
-                    <property name="editable">false</property>
-                    <property name="cursor-visible">false</property>
-                    <property name="top-margin">8</property>
-                    <property name="bottom-margin">8</property>
-                    <property name="left-margin">12</property>
-                    <property name="right-margin">12</property>
-                    <property name="right-margin-position">30</property>
-                    <property name="monospace">true</property>
-                    <property name="show-line-numbers">true</property>
-                    <property name="buffer">
-                      <object class="GtkSourceBuffer" id="buffer">
-                      </object>
-                    </property>
-                    <style>
-                      <class name="preview"/>
-                    </style>
+                <property name="buffer">
+                  <object class="GtkSourceBuffer" id="buffer">
                   </object>
-                </child>
+                </property>
+                <style>
+                  <class name="preview"/>
+                  <class name="card"/>
+                </style>
               </object>
             </child>
             <child>
               <object class="GtkFlowBox" id="scheme_group">
                 <signal name="child-activated" handler="style_scheme_activated_cb" swapped="true"/>
                 <property name="hexpand">true</property>
-                <property name="column-spacing">0</property>
-                <property name="row-spacing">0</property>
+                <property name="column-spacing">12</property>
+                <property name="row-spacing">12</property>
                 <property name="max-children-per-line">4</property>
                 <property name="max-children-per-line">4</property>
                 <property name="selection-mode">none</property>
