menus: add translator comment for tab character
Fixes #362

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -280,7 +280,7 @@ Or, press Ctrl+W to close the window.</property>
         <attribute name="action">settings.auto-indent</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Tabs</attribute>
+        <attribute name="label" translatable="yes" comment="Translators: this is a tab character, not a browser tab">_Tabs</attribute>
         <attribute name="action">settings.indent-style</attribute>
         <attribute name="target" type="s">'tab'</attribute>
       </item>
