translations: fix comments attribute
Thanks Piotr!

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -159,7 +159,7 @@
         </section>
         <section>
           <item>
-            <attribute name="label" translatable="yes" comment="Translators: this is a tab character, not a browser tab">_Tabs</attribute>
+            <attribute name="label" translatable="yes" comments="Translators: this is a tab character, not a browser tab">_Tabs</attribute>
             <attribute name="action">view.indent-style</attribute>
             <attribute name="target" type="s">'tab'</attribute>
           </item>
