infobar: wrap text so it can fit narrow screens
Currently, the infobar is the one element taking up the most horizontal
space, making this application unusable on narrow screens such as mobile
phones.

Wrapping all the labels (including those of buttons with long labels)
allows resizing the window to less than 360px under Phosh (where the
window controls buttons are hidden), therefore allowing it to be used
on mobile phones.

--- a/src/editor-info-bar.ui
+++ b/src/editor-info-bar.ui
@@ -17,6 +17,7 @@
                   <object class="GtkLabel" id="access_title">
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">Could Not Open File</property>
+                    <property name="wrap">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -26,6 +27,7 @@
                   <object class="GtkLabel" id="access_subtitle">
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">You do not have permission to open the file.</property>
+                    <property name="wrap">True</property>
                   </object>
                 </child>
               </object>
@@ -59,6 +61,7 @@
                   <object class="GtkLabel" id="title">
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">Document Restored</property>
+                    <property name="wrap">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -68,6 +71,7 @@
                   <object class="GtkLabel" id="subtitle">
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">Unsaved document has been restored.</property>
+                    <property name="wrap">True</property>
                   </object>
                 </child>
               </object>
