infobar: wrap save button label as well
With the addition of new translations, it appears this button can also
cause the window size to overflow mobile phones screens. Making sure it
has a label on creation allows us to ensure this label can wrap like we
do for other infobar buttons, making this app more suitable to small
displays.

--- a/src/editor-info-bar.ui
+++ b/src/editor-info-bar.ui
@@ -84,7 +84,7 @@
             </child>
             <child type="action">
               <object class="GtkButton" id="save">
-                <property name="margin-start">6</property>
+                <property name="label" translatable="yes">_Save…</property>
                 <property name="use-underline">True</property>
               </object>
             </child>
