window: ensure the status page description can wrap
Otherwise it can make the window too wide depending on the user's
current locale.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -176,6 +176,7 @@
 • Press Ctrl+O to browse for a document
 
 Or, press Ctrl+W to close the window.</property>
+                    <property name="wrap">True</property>
                   </object>
                 </property>
               </object>
