sidebar-row: use custom tooltip for sidebar rows
We should show the full path for files so that we can see through any
ellipsized text. However, tooltips by default wrap and so we want to use
our own label to display so we avoid the "natural word" line breaks.

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -2,6 +2,8 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <template class="EditorSidebarRow" parent="GtkListBoxRow">
+    <property name="has-tooltip">true</property>
+    <signal name="query-tooltip" handler="query_tooltip_cb"/>
     <child>
       <object class="GtkGrid" id="grid">
         <property name="margin-top">3</property>
@@ -95,4 +97,8 @@
       </object>
     </child>
   </template>
+  <object class="GtkLabel" id="tooltip">
+    <property name="ellipsize">end</property>
+    <property name="wrap">false</property>
+  </object>
 </interface>
