Duplicate Row Below
Using Ctrl+Alt+d the user can make a copy of the current line below it.

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -151,6 +151,12 @@
                 <property name="accelerator">&lt;control&gt;&lt;shift&gt;c</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Copy current line down</property>
+                <property name="accelerator">&lt;control&gt;&lt;alt&gt;d</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
