help-overlay: Add missing general shortcuts

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -328,6 +328,29 @@
             </child>
           </object>
         </child>
+        <child>
+          <object class="GtkShortcutsGroup">
+            <property name="title" translatable="yes" context="shortcut window">General</property>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">win.show-preferences</property>
+                <property name="title" translatable="yes" context="shortcut window">Show preferences</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">win.alternate-help-overlay</property>
+                <property name="title" translatable="yes" context="shortcut window">Show keyboard shortcuts</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">app.help</property>
+                <property name="title" translatable="yes" context="shortcut window">Show help</property>
+              </object>
+            </child>
+          </object>
+        </child>
       </object>
     </child>
   </object>
