editor-window.ui: Use header capitalization for tooltips of headerbar buttons
The HIG advises to use header capitalization for button tooltips:
https://developer.gnome.org/hig/patterns/feedback/tooltips.html?highlight=tooltips

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -93,7 +93,7 @@
                     <property name="action-name">session.new-draft</property>
                     <property name="icon-name">tab-new-symbolic</property>
                     <property name="has-tooltip">true</property>
-                    <property name="tooltip-text" translatable="yes">New tab (Ctrl+T)</property>
+                    <property name="tooltip-text" translatable="yes">New Tab (Ctrl+T)</property>
                     <accessibility>
                       <property name="label" translatable="yes">New tab (Ctrl+T)</property>
                     </accessibility>
