--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -81,7 +81,7 @@
                   <object class="GtkMenuButton" id="open_menu_button">
                     <property name="label" translatable="yes">_Open</property>
                     <property name="use-underline">True</property>
-                    <property name="tooltip-text" translatable="yes">Open recent document (Ctrl+K)</property>
+                    <property name="tooltip-text" translatable="yes">Recently Used Documents (Ctrl+K)</property>
                     <property name="popover">
                       <object class="EditorOpenPopover" id="open_menu_popover">
                       </object>
